# pants_poc

./: .cruft.json  .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  .versionrc  BUILD  Dockerfile  Jenkinsfile  README.md  docker-compose.yaml  jenkins-pipeline.yaml  pants.toml  pyproject.toml  requirements.txt  tox.ini
src/pants_poc/: __init__.py
src/pants_poc/db/: BUILD  __init__.py  books_model.py
src/pants_poc/service/: __init__.py  app.py  base_config.py  config.py
src/services/book_creator/: BUILD  Dockerfile  app.py  test_service.py
src/services/book_reader/: BUILD  Dockerfile  app.py  test_service.py
src/services/utils/: BUILD  __init__.py  common.py
tests/: test_docker.py  test_project.py
tests/service/: __init__.py  conftest.py  test_service.py
